--- a/bibliolights-frontend/src/pages/Home.css
+++ b/bibliolights-frontend/src/pages/Home.css
@@ -230,3 +230,13 @@ book-grid {
   gap: 20px; /* Espacio entre las tarjetas */
   margin-bottom: 10px; /* Reduzco el margen inferior para acercar la paginación */
 }
+.search-bar {
+  display: block;
+  margin: 20px 0;
+  padding: 10px;
+  width: 100%;
+  max-width: 400px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+}
